# bentof

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/et/bento/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: h5.h264
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Documents/MkDocs/src/documentation/: mp42aac.md  mp42avc.md  mp42hevc.md  mp42hls.md  mp42ts.md  mp4compact.md  mp4dash.md  mp4dashclone.md  mp4dcfpackager.md  mp4decrypt.md  mp4encrypt.md  mp4hls.md  mp4info.md  mp4mux.md  mp4split.md
app/src/main/cpp/Source/C++/Apps/: Mp42Hls.h  Mp42Ts.cpp  Mp4Mux.cpp  Mp4Mux.h
app/src/main/cpp/Source/C++/Apps/AvcInfo/: AvcInfo.cpp
app/src/main/cpp/Source/C++/Apps/Mp4AudioClip/: Mp4AudioClip.cpp
app/src/main/cpp/Source/C++/Apps/Mp4Compact/: Mp4Compact.cpp
app/src/main/cpp/Source/C++/Apps/Mp4DcfPackager/: Mp4DcfPackager.cpp
app/src/main/cpp/Source/C++/Apps/Mp4Fragment/: Mp4Fragment.cpp
app/src/main/cpp/Source/C++/Apps/Mp4Info/: Mp4Info.cpp
app/src/main/cpp/Source/C++/Apps/Mp4Split/: Mp4Split.cpp
app/src/main/cpp/Source/C++/Codecs/: Ap4Ac3Parser.h  Ap4Ac4Parser.h  Ap4AdtsParser.h  Ap4AvcParser.h  Ap4NalParser.h
app/src/main/cpp/Source/C++/Core/: Ap4FileByteStream.h  Ap4SegmentBuilder.h
app/src/main/cpp/Source/C++/MetaData/: Ap4MetaData.h
app/src/main/cpp/Source/C++/bentof/: bentof.cpp  bentof.h
app/src/main/cpp/Source/Python/utils/: check-indexes.py  mp4-dash-clone.py  mp4-dash-encode.py  mp4-dash.py  mp4-hls.py
app/src/main/cpp/bento/: CMakeLists.txt  build_android.sh
app/src/main/cpp/bento/Source/C++/Apps/Mp4Mux/: Mp4Mux.cpp
app/src/main/cpp/bento/Source/C++/Core/: Ap4Config.h
app/src/main/cpp/bento/android/: CMakeCache.txt  Makefile  aac2mp4  avcinfo  cmake_install.cmake  fixaacsampledescription  hevcinfo  install_manifest.txt  mp42aac  mp42avc  mp42hevc  mp42hls  mp42ts  mp4audioclip  mp4compact  mp4dcfpackager  mp4decrypt  mp4diff  mp4dump  mp4edit  mp4encrypt  mp4extract  mp4fragment  mp4iframeindex  mp4info  mp4mux  mp4pssh  mp4rtphintinfo  mp4split  mp4tag
app/src/main/cpp/bento/cbuild/: aac2mp4  avcinfo  hevcinfo  mp42aac  mp42avc  mp42hevc  mp42hls  mp4audioclip  mp4dcfpackager  mp4decrypt  mp4diff  mp4dump  mp4encrypt  mp4info  mp4split  mp4tag
app/src/main/cpp/cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  fixaacsampledescription  mp42ts  mp4compact  mp4edit  mp4extract  mp4fragment  mp4iframeindex  mp4mux  mp4pssh  mp4rtphintinfo
app/src/main/java/com/et/bento/: FileUtils.java  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/et/bento/: ExampleUnitTest.kt
bentof/: build.gradle
bentof/src/androidTest/java/com/et/brntof/: ExampleInstrumentedTest.java
bentof/src/main/cpp/: CMakeLists.txt
bentof/src/main/cpp/bentof/Apps/: Mp42Hls.cpp  Mp42Ts.h  Mp4Mux.h
bentof/src/main/cpp/bentof/Apps/Mp42Aac/: Mp42Aac.cpp
bentof/src/main/cpp/bentof/Apps/Mp42Avc/: Mp42Avc.cpp
bentof/src/main/cpp/bentof/Apps/Mp42Hevc/: Mp42Hevc.cpp
bentof/src/main/cpp/bentof/Apps/Mp42Hls/: Mp42Hls.cpp
bentof/src/main/cpp/bentof/Apps/Mp4Decrypt/: Mp4Decrypt.cpp
bentof/src/main/cpp/bentof/Apps/Mp4Encrypt/: Mp4Encrypt.cpp
bentof/src/main/cpp/bentof/Apps/Mp4Tag/: Mp4Tag.cpp
bentof/src/main/cpp/bentof/Codecs/: Ap4BitStream.h  Ap4Eac3Parser.h  Ap4HevcParser.h
bentof/src/main/cpp/bentof/Core/: Ap4.h
bentof/src/main/cpp/bentof/System/StdC/: Ap4StdCFileByteStream.cpp
bentof/src/main/cpp/bentof/System/WinCE/: Ap4WinceMain.cpp
bentof/src/main/cpp/jni/: bentof.cpp  bentof.h
bentof/src/main/java/com/et/bentof/: Bentof.java
bentof/src/test/java/com/et/brntof/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
